feat: bookmark thumbnails
