# docs/swagger/swagger.json
@@ -1028,6 +1028,9 @@
                 "hasEbook": {
                     "type": "boolean"
                 },
+                "hasThumbnail": {
+                    "type": "boolean"
+                },
                 "html": {
                     "type": "string"
                 },
@@ -1314,14 +1317,14 @@
                 "hasEbook": {
                     "type": "boolean"
                 },
+                "hasThumbnail": {
+                    "type": "boolean"
+                },
                 "html": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "imageURL": {
-                    "type": "string"
                 },
                 "modifiedAt": {
                     "type": "string"
